# Precticas_cpp

./: .buildconfig  Practica_CPP.kdev4  meson.build
.kdev4/: Practica_CPP.kdev4
Analisis/: Clasetiendav0-1.xmi  casosdeuso.xmi  framework_fjv.xmi  tienda_version_Alfa.xmi
Capitulo_1/: Programa.cpp  meson.build
TiendaComestibles/: CHANGELOG  CHANGELOG.md  GroceryItem.cpp  GroceryItem.hpp  ShoppingCar.cpp  ShoppingCar.hpp  Storage.cpp  Storage.hpp  Store.cpp  Store.hpp  main.cpp  meson.build
fjv/: CHANGELOG  CHANGELOG.md  meson.build
fjv/include/: Application.hpp  fjv.h
