#Constuye la Aplicacion de practica de Tienda de comestibles 

#Array que contiene el nombre de los archivos que se compilaran para la aplicacion 
TiendaSrc = [
    'main.cpp',
    'GroceryItem.cpp',
    'Store.cpp'
]

executable('TiendaCome', sources : TiendaSrc , include_directories : fjv_include_dir)
 